package com.trainerapp.calorie_calculator.enums;

public enum DifficultyType {

    EASY,
    INTERMEDIATE,
    HARD

}
