@startuml

class Recipe {
    - id: Long
    - name: String
    - description: String
    - imageUrl: String
    - sections: List<RecipeSection>
    - preparationTime: String
    - difficulty: DifficultyType
    - tags: List<Tag>
}

class RecipeSection {
    - id: Long
    - title: String
    - ingredients: List<Ingredient>
    - seasonings: List<Seasoning>
    - steps: List<Step>
}

class Step {
    - instructions: String
}

class Ingredient {
    - id: Long
    - food: Food
    - amount: Double
    - unit: MeasurementUnit
    - label: String
}

class Seasoning {
    - id: Long
    - name: String
    - amount: Double
    - unit: UnitType
    - label: String
}

class Food {
    - id: Long
    - name: String
    - nutritionalInfo: NutritionalInfo
    - micronutrients: List<MicronutrientContent>
    - allowedUnits: List<MeasurementUnit>
    - foodOrigin: FoodOriginType
    - nutritionalFunctions: List<NutritionalFunctionType>
}

class NutritionalInfo {
    - energy: Double
    - carbohydrates: Double
    - sugars: Double
    - proteins: Double
    - totalFats: Double
    - saturatedFats: Double
    - fiber: Double
}

class MicronutrientContent {
    - id: Long
    - micronutrient: Micronutrient
    - amountPerGram: Double
}

class Micronutrient {
    - id: Long
    - name: String
    - rda: Double
    ' Recommended Daily Allowance
    - unit: UnitType
}

class MeasurementUnit {
    - id: Long
    - unit: UnitType
    - gramsPerUnit: Double
}

class Tag {
    - id: Long
    - label: String
}


Recipe "1" *-- "*" RecipeSection
Recipe "1" *-- "*" Tag

RecipeSection "1" *-- "*" Step
RecipeSection "1" *-- "*" Ingredient
RecipeSection "1" *-- "*" Seasoning

Ingredient "1" *-- "1" Food
Ingredient "1" o-- "1" MeasurementUnit

Food "1" *-- "1" NutritionalInfo
Food "1" *-- "*" MeasurementUnit
Food "1" *-- "*" MicronutrientContent

MicronutrientContent "1" *-- "1" Micronutrient


enum UnitType {
    GRAMS
    MILLIGRAMS
    KILOGRAMS
    MICROGRAMS
    MILLILITERS
    UNIT
    TABLESPOON
    TEASPOON
    PERCENTAGE
    AS_NEEDED
    TO_TASTE
    SLICE
    PIECE
    PINCH
    HANDFUL
    DASH
    DROP
}

enum FoodOriginType {
    GRAIN
    VEGETABLE
    FRUIT
    DAIRY
    PROTEIN
}

enum NutritionalFunctionType {
    ENERGY_FOOD
    REGULATORY_FOOD
    BUILDER_FOOD
}

enum DifficultyType {
    EASY
    INTERMEDIATE
    HARD
}

enum MicronutrientType {
    VITAMIN
    MINERAL
    ELECTROLYTE
    ANTIOXIDANT
    ESSENTIAL_FATTY_ACID
}

@enduml
